--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>南哪指南</title>
-    <meta name="description" content="南哪人的专属导航页！">
+    <title>HEUindex</title>
+    <meta name="description" content="HEUer 专属导航页！">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="styles/main.css">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112910356-6"></script>
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112910356-11"></script> -->
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-112910356-6');
-      // gtag('config', 'UA-112910356-11');
-    </script>
   </head>
   <body>
     <noscript>
