--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <noscript>
@@ -18,8 +18,8 @@
     </noscript>
     <div id="app"></div>
     <add-to-home-screen></add-to-home-screen>
-    <script type="module" src="js/AddToHomeScreen.js"></script>
-    <script type="module" src="js/FuckWeixin.js"></script>
+    <script type="module" src="js/AddToHomeScreen.js" rel="preload" as="script" crossorigin="anonymous"></script>
+    <script type="module" src="js/FuckWeixin.js" rel="preload" as="script" crossorigin="anonymous"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
